--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,21 +26,29 @@ opener_platform_support("INCLUDES")
 ###############################################################
 set(OPENER_DATA_FOLDER "${OpENer_SOURCE_DIR}/../data")
 find_file( FILE_OBJECT_EDS_FILE_LOCATION NAMES opener_sample_app.eds PATHS ${OPENER_DATA_FOLDER} NO_DEFAULT_PATH  DOC "EDS File to be provided by File Object Instance 0xC8" )
-add_definitions(-DFILE_OBJECT_EDS_FILE_LOCATION=\"${FILE_OBJECT_EDS_FILE_LOCATION}\")
+add_compile_definitions(FILE_OBJECT_EDS_FILE_LOCATION=\"${FILE_OBJECT_EDS_FILE_LOCATION}\")
 
 ###############################################################
-# Certificate file for Default Device Certificate            # TODO: move file to security direcory?
+# Certificate file for Default Device Certificate             #
 ###############################################################
-set(OPENER_DATA_FOLDER "${OpENer_SOURCE_DIR}/../data")
-find_file( FILE_OBJECT_CERTIFICATE_FILE_LOCATION NAMES test-cert.pem PATHS ${OPENER_DATA_FOLDER} NO_DEFAULT_PATH  DOC "Default Device Certificate File" )
-add_definitions(-DFILE_OBJECT_CERTIFICATE_FILE_LOCATION=\"${FILE_OBJECT_CERTIFICATE_FILE_LOCATION}\")
+if(EXISTS "${OPENER_DATA_FOLDER}/cert.crt")
+    find_file( FILE_OBJECT_CERTIFICATE_FILE_LOCATION NAMES cert.crt PATHS ${OPENER_DATA_FOLDER} NO_DEFAULT_PATH  DOC "Default Device Certificate File" )
+else()
+    file(WRITE ${OPENER_DATA_FOLDER}/cert.crt "") # create empty file if not exists
+    set( FILE_OBJECT_CERTIFICATE_FILE_LOCATION ${OPENER_DATA_FOLDER}/cert.crt)
+endif()
+add_compile_definitions(FILE_OBJECT_CERTIFICATE_FILE_LOCATION=\"${FILE_OBJECT_CERTIFICATE_FILE_LOCATION}\")
 
 ###############################################################
-# CSR file for static File Object Instance                    # TODO: remove - for testing
+# CSR file for Default Device Certificate                     #
 ###############################################################
-set(OPENER_DATA_FOLDER "${OpENer_SOURCE_DIR}/../data")
-find_file( FILE_OBJECT_CSR_FILE_LOCATION NAMES test-CSR.pem PATHS ${OPENER_DATA_FOLDER} NO_DEFAULT_PATH  DOC "Test CSR File" )
-add_definitions(-DFILE_OBJECT_CSR_FILE_LOCATION=\"${FILE_OBJECT_CSR_FILE_LOCATION}\")
+if(EXISTS "${OPENER_DATA_FOLDER}/csr.req")
+    find_file( FILE_OBJECT_CSR_FILE_LOCATION NAMES csr.req PATHS ${OPENER_DATA_FOLDER} NO_DEFAULT_PATH  DOC "CSR File" )
+else()
+    file(WRITE ${OPENER_DATA_FOLDER}/csr.req "") # create empty file if not exists
+    set( FILE_OBJECT_CSR_FILE_LOCATION ${OPENER_DATA_FOLDER}/csr.req)
+endif()
+add_compile_definitions(FILE_OBJECT_CSR_FILE_LOCATION=\"${FILE_OBJECT_CSR_FILE_LOCATION}\")
 
 ##################################
 # Set source for library         #
